--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 
 <html>
+    <head>
+        <link src="./styles.css" />
+    </head>
     <body>
         <h1>Hello World!</h1>
     </body>
