--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 
         <p>Add some description</p>
         <p>Add some description</p>
+
+        <button>Click me</button>
     </body>
 </html>
