--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <p>Add some description</p>
 
         <button>Click me</button>
+        <button>Click me 2</button>
     </body>
 </html>
