--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Hello World!</h1>
+        <ul>
+            <li>Link 1</li>
+        </ul>
 
         <p>Add some description</p>
         <p>Add some description</p>
