--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <p>Add some description</p>
 
         <button>Click me</button>
-        <button>Click me 2</button>
+        <button>Submit</button>
     </body>
 </html>
